--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "David Höck",
-            "email": "david.hoeck@womensbest.com"
+            "email": "d.hoeck@alpin11.at"
         }
     ],
     "minimum-stability": "stable",
